bk_ida/gccida/c0/insert_one_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_one_insn/src/caller-save.c:1269:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = chain->insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_one_insn/src/caller-save.c:1319:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_one_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_one_insn/src/caller-save.c:1320:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_one_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_one_insn/src/obj/caller-save.o] Error 1
